[package]
name = "dkg_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
curv-kzen = { version = "0.9", default-features = false }
class_group ={ path="./class_group" }
sha2 = "0.9"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }

